Spawn squares with text commands

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 
     <script type="text/javascript" src="js/baseClasses/Component.js"></script>
     <script type="text/javascript" src="js/baseClasses/SVG.js"></script>
+    <script type="text/javascript" src="js/components/Square.js"></script>
     <script type="text/javascript" src="js/components/TextBox.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/utils.js"></script>
   </head>
 
   <body>
