--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <script type="text/javascript" src="js/baseClasses/Component.js"></script>
     <script type="text/javascript" src="js/baseClasses/SVG.js"></script>
+    <script type="text/javascript" src="js/components/Rectangle.js"></script>
     <script type="text/javascript" src="js/components/Square.js"></script>
     <script type="text/javascript" src="js/components/TextBox.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
