--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="js/baseClasses/Component.js"></script>
     <script type="text/javascript" src="js/baseClasses/SVG.js"></script>
     <script type="text/javascript" src="js/components/Circle.js"></script>
+    <script type="text/javascript" src="js/components/Line.js"></script>
     <script type="text/javascript" src="js/components/Rectangle.js"></script>
     <script type="text/javascript" src="js/components/Square.js"></script>
     <script type="text/javascript" src="js/components/TextBox.js"></script>
