Add line resize functionality

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="js/components/Rectangle.js"></script>
     <script type="text/javascript" src="js/components/Square.js"></script>
     <script type="text/javascript" src="js/components/TextBox.js"></script>
+    <script type="text/javascript" src="js/subcomponents/Resizer.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/utils.js"></script>
   </head>
